Update Ember and friends
v3.24.0...v3.28.3

--- a/addon/components/time.hbs
+++ b/addon/components/time.hbs
@@ -2,6 +2,6 @@
   {{#if (has-block)}}
     {{yield}}
   {{else}}
-    {{date-format @value "MMM d, yyyy"}}
+    {{date-format @value 'MMM d, yyyy'}}
   {{/if}}
 </time>
